commit con progetto quasi finito

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <nav>
      
-      <span>1</span>
-      <span>2</span>
-      <span>3</span>
+      <span><a href="#scarpa-one">1</a></span>
+      <span><a href="#scarpa-two">2</a></span>
+      <span><a href="#scarpa-tree">3</a></span>
 
     </nav>
 
@@ -42,7 +42,7 @@
 
       <div>
 
-        <img src="assets/img/01.png" alt="scarpa 1">
+        <img src="assets/img/02.png" alt="scarpa 2">
         <h1>il nostro modello <br> di punta</h1>
 
       </div>
@@ -54,7 +54,7 @@
 
       <div>
 
-        <img src="assets/img/01.png" alt="scarpa 1">
+        <img src="assets/img/03.png" alt="scarpa 3">
         <h1>il nostro modello <br> di punta</h1>
 
       </div>
