esercizio finito completo di opzione scroll

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
-  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+  <title>Shoes</title>
 </head>
 <body>
 
@@ -14,9 +16,10 @@
 
     <nav>
      
-      <span><a href="#scarpa-one">1</a></span>
-      <span><a href="#scarpa-two">2</a></span>
-      <span><a href="#scarpa-tree">3</a></span>
+      <a href="#scarpa-one"><span>1</span></a>
+      <a href="#scarpa-two"><span>2</span></a>
+      <a href="#scarpa-tree"><span>3</span></a>
+      
 
     </nav>
 
